# Stochastic-time-dependent-vehicle-routing-problem-with-non-recurring-congestion-events

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Main_Chengdu_Sirve_2_Acciones_Sin_Algunas_Variables.py  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: implement.md
.github/workflows/: ci.yml
.scratch/generic-stdvrp-refactor/: spec.md
.scratch/generic-stdvrp-refactor/issues/: 01-tag-legacy-and-data-conventions.md  02-package-scaffold-toolchain-ci.md  03-deterministic-fixture-subnetwork.md  04-golden-master-capture.md  05-data-spine-config-to-travel-times.md  06-demand-and-shortest-paths.md  07-tracer-bullet-evaluation-episode.md  08-training-episode-and-w-update.md  09-trainer-end-to-end.md  10-simulation-invariant-suite.md  11-unit-tests-pure-functions.md  12-deliberate-bug-fixes.md  13-rng-modernization.md  14-retire-the-monolith.md  15-manual-repo-rename.md
data/: README.md
docs/adr/: 0001-characterize-then-evolve-refactor.md  0002-powell-vocabulary-and-three-variation-points.md
docs/research/: congestion-no-recurrente-y-rl.md  rl-methodology-for-stdvrp.md
experiments/chengdu/: config.yaml  run.py
scripts/: capture_golden_master.py  make_fixture.py  rebaseline_golden_master.py
src/stdvrp/: __init__.py  config.py
src/stdvrp/congestion/: __init__.py  generator.py
src/stdvrp/demand/: __init__.py  client_generator.py
src/stdvrp/network/: __init__.py  road_network.py  shortest_path_cache.py
src/stdvrp/policies/: __init__.py  (+2 more)
tests/: characterization_world.py  conftest.py  legacy_source.py  test_data_spine.py  test_demand_and_paths_vs_legacy.py  test_evaluation_episode_vs_legacy.py  test_fixture.py  test_golden_master.py  test_invariants.py  test_new_package_vs_golden_master.py  test_scaffold.py  test_trainer_smoke.py  test_training_episode_vs_legacy.py  test_travel_time_model_vs_legacy.py
tests/unit/: test_client_generator.py  test_congestion_generator.py  test_experiment_config.py  test_golden_capture_helpers.py  test_model_termination.py  test_monte_carlo_policy.py  test_periods.py  test_shortest_path_cache.py  test_speed_interpolation.py  test_speed_std_lookup.py  test_trainer.py
(+21 files in other folders)
